# telemetryx

./: .gitignore  Dockerfile  Dockerfile.exception  README.md
drone-clone/: .gitignore  GoogleService-Info.plist  config.xml  google-services.json  ionic.config.json  package-lock.json  package.json
drone-clone/resources/: icon.png.md5  splash.png.md5
drone-clone/src/app/: app.component.ts  app.html  app.module.ts  app.scss
drone-clone/src/services/: HttpService.ts  action-sheet-service.ts  app-settings.ts  check-box-service.ts  dronemon-login-service.ts  dronemon-mission-service.ts  dronemon-service.ts  home-service.ts  image-gallery-service.ts  intro-service.ts  list-view-appearance-animation-service.ts  list-view-drag-and-drop-service.ts  list-view-expandable-service.ts  list-view-google-card-service.ts  list-view-sticky-list-header-service.ts  list-view-swipe-to-dismiss-service.ts  login-service.ts  maps-service.ts  menu-service.ts  parallax-service.ts  radio-button-service.ts  range-service.ts  register-service.ts  search-bar-service.ts  select-service.ts  spinner-service.ts  splash-screen-service.ts  tabs-service.ts  (+2 more)
minion-node/: Cargo.toml
minion-node/minion-lib/: Cargo.toml
minion-node/minion-server/: Cargo.toml
minion-node/minion-server/src/: api.rs  main.rs  router.rs
telemonitor/: README.md  package.json
telemonitor/public/: index.html  manifest.json
telemonitor/src/: App.vue  main.ts  router.ts
tyx/: ionic.config.json  package-lock.json  package.json
tyx-server/: package.json
tyx-server/src/: index.ts
tyx-server/tools/: copyAssets.ts
(+239 files in other folders)
