[package]
name = "minion-server"
version = "0.1.0"
authors = ["telemetryx.io"]
edition = "2018"

[dependencies]
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
num_cpus = "1.0"
jsonwebtoken = "^5.0.1"

actix-web = "^0.7"
http = "^0.1.0"
dotenv = "^0.13.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "^0.2.0"
env_logger = "^0.5.0"
futures = "^0.1"
minion-lib = { path = "../minion-lib" }